--- a/css/style.css
+++ b/css/style.css
@@ -20,3 +20,29 @@ table td {
   padding: 1rem;
   text-align: center;
 }
+
+/* insert.php */
+h1,
+p {
+  text-align: center;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+form div {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 1.5rem;
+}
+
+form label {
+  margin-top: 0.75rem;
+}
+
+label span {
+  color: red;
+}
